syntax = "proto3";

option optimize_for = CODE_SIZE;

import "packages/dht/protos/DhtRpc.proto";

service OperatorDiscovery {
  rpc discoverOperators (OperatorDiscoveryRequest) returns (OperatorDiscoveryResponse);
}

message OperatorDiscoveryRequest {
    string streamPartId = 1;
}

message OperatorDiscoveryResponse {
    repeated dht.PeerDescriptor operators = 1;
}
